Fix bug with IconCard icons not appearing on iOS

--- a/src/components/css/IconChooserGrid.module.css
+++ b/src/components/css/IconChooserGrid.module.css
@@ -60,6 +60,8 @@
 }
 
 .icon {
+	position: absolute;
+	left: 0;
 	height: 100%;
 	width: 100%;
 	padding: 0;
